# flopsis

./: Cargo.toml  Dockerfile  README.md
.github/workflow/: general.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
templates/: tricycleasia.html.tera
tests/: health_check.rs
