[package]
name = "flopsis"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "flopsis"

[dependencies]
actix-web = { version = "4.9.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
config = "0.15.8"
uuid = { version = "1.13.2", features = ["v4"] }
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
